--- a/css/styles.css
+++ b/css/styles.css
@@ -172,9 +172,23 @@ letter-spacing: 0.02em;
     color: var(--accent-color);
 }
 /* шапка */
-.hero{
-    /* height: 600px; */
+.overlay{
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
     background-color:var(--background-color2);
+    background-image: linear-gradient( 
+        to right,
+         rgba(47, 48, 58, 0.4),
+         rgba(47, 48, 58, 0.4)
+         ),
+    url(../images/Img17.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.hero{
     padding: 200px 0;
     text-align: center;
     
