--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,9 @@ text-transform: uppercase;
 .features-text{
 line-height: 1.7;
 }
+.button:hover, .button:focus{
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
 
 .portfolio-list{
     display: flex;
@@ -350,11 +353,14 @@ line-height: 1.7;
     margin-bottom: 30px;
     width: 370px;
     }
+.portfolio-cards:hover, .portfolio-cards:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}   
 
 .portfolio-cards:nth-child(3n){
     margin-right: 0px;
 }
-.portfolio-cards:last-child{
+.portfolio-cards:nth-last-child(-n + 3){
   margin-bottom: 0px;  
 }
     
