--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ button{
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    
 }
 .section{
     padding: 94px 0;
@@ -103,7 +104,7 @@ color: var(--title-text-color);
 .page-header-conteiner{
 display: flex;
 align-items: center;
-
+border-bottom: 1px solid #ECECEC;
 }
 
 .site-nav{
@@ -154,6 +155,8 @@ margin-left: auto;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
+display: flex;
+align-items: center;
 
 }
 .mail-nav:hover, .mail-nav:focus{
@@ -177,20 +180,14 @@ letter-spacing: 0.02em;
 .item-icon-mail{
 width: 16px;
 height: 12px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: contain;
-margin-right: 6px;
-fill: var(--primary-text-color);
+margin-right: 10px;
+fill: currentColor;
 }
 .item-icon-tel{
-    width: 16px;
-    height: 12px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
+    width: 12px;
+    height: 16px;
     margin-right: 10px;
-    fill: var(--primary-text-color);
+    fill:currentColor;
     }
 .tel-nav{    
     text-decoration: none;
@@ -199,6 +196,8 @@ fill: var(--primary-text-color);
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
+display: flex;
+align-items: center;
 
      }
      
@@ -272,6 +271,7 @@ color: var(--black-color)}
 font-size: 16px;
 line-height: 1.6;
 border: none;
+letter-spacing: 0.02em;
 
     border-radius: 4px;
     padding: 6px 22px;
@@ -282,6 +282,7 @@ border: none;
 .button:hover, .button:focus{
     color: var(--background-color);
     background-color: var(--accent-color);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25) );
 }
 .portfolio-button{
     display: flex;
@@ -353,9 +354,11 @@ line-height: 1.7;
     margin-bottom: 30px;
     width: 370px;
     }
-.portfolio-cards:hover, .portfolio-cards:focus{
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}   
+.portfolio-cards-link:hover, .portfolio-cards-link:focus{
+    box-shadow: 
+    0px 1px 1px rgba(0, 0, 0, 0.12), 
+    0px 4px 4px rgba(0, 0, 0, 0.06), 
+    1px 4px 6px rgba(0, 0, 0, 0.16);}   
 
 .portfolio-cards:nth-child(3n){
     margin-right: 0px;
@@ -363,7 +366,10 @@ line-height: 1.7;
 .portfolio-cards:nth-last-child(-n + 3){
   margin-bottom: 0px;  
 }
-    
+.portfolio-cards-link{
+    display: block;
+    }
+
 
 
 .portfolio-div{
@@ -468,8 +474,8 @@ color: var(--primary-text-color);
 .social-list{
     display:flex;
     justify-content: center;
-    column-gap: 22px;
-    margin-top: 28px;
+    column-gap: 10px;
+    margin-top: 16px;
     
 }
 .social-list-item{
@@ -482,20 +488,19 @@ color: var(--primary-text-color);
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background-color:var(--background-color)
+    background-color:var(--background-color);
+    color: var(--cocial-color);
 }
 .social-list-icon{
     width: 20px;
     height: 20px;
-   fill: var(--cocial-color);
+   fill: currentColor;
     }
 .social-list-link:hover, .social-list-link:focus{
 background-color: var(--accent-color);
+color: var(--background-color);
 }
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon{
-    fill: var(--background-color)
-    }
+
 
     /* <!--Постійні клієнти--> */
 
@@ -507,6 +512,9 @@ background-color: var(--accent-color);
     column-gap: 30px;
 }   
 .client-list-icon{
+    
+} 
+.client-list-link{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -514,16 +522,18 @@ background-color: var(--accent-color);
     height: 92px;
     border: 1px solid var(--cocial-color);
     border-radius: 4px;
-} 
+    color: var(--cocial-color);
+}
 .client-list-logo{
     width: 106px;
     height: 60px;
     fill: var(--cocial-color);
 
 }
-.client-list-icon:hover,
-.client-list-icon:focus{
+.client-list-link:hover,
+.client-list-link:focus{
     border: 1px solid var(--accent-color);
+    color: var(--accent-color);
 }
 .client-list-icon:hover .client-list-logo,
 .client-list-icon:focus .client-list-logo{
@@ -571,11 +581,27 @@ text-decoration: none;
    
 }
 .cocial-footer-title{
+    font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
     color: var(--background-color);
 }
- .filter{
+.social-list-footer{
     background:rgba(255, 255, 255, 0.1);
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--background-color)
+}
+.social-list-footer:hover,
+.social-list-footer:focus{
+    background-color: var(--accent-color);
+color: var(--background-color);
 }
 .footer-conteiner{
    display: flex;
